[package]
name = "advent-of-code"
version = "0.1.0"
authors = ["Jonas Karlsson <jonaskarlsson@fripost.org>"]
edition = "2024"

[dependencies]
year2015day01 = { path = "2015/day01" }
year2015day02 = { path = "2015/day02" }
year2015day03 = { path = "2015/day03" }
year2015day04 = { path = "2015/day04" }
year2015day05 = { path = "2015/day05" }
year2015day06 = { path = "2015/day06" }
year2015day07 = { path = "2015/day07" }
year2015day08 = { path = "2015/day08" }
year2015day09 = { path = "2015/day09" }
year2015day10 = { path = "2015/day10" }
year2015day11 = { path = "2015/day11" }
year2015day12 = { path = "2015/day12" }
year2015day13 = { path = "2015/day13" }
year2015day14 = { path = "2015/day14" }
year2015day15 = { path = "2015/day15" }
year2015day16 = { path = "2015/day16" }
year2015day17 = { path = "2015/day17" }
year2015day18 = { path = "2015/day18" }
year2015day19 = { path = "2015/day19" }
year2015day20 = { path = "2015/day20" }
year2015day21 = { path = "2015/day21" }
year2015day22 = { path = "2015/day22" }
year2015day23 = { path = "2015/day23" }
year2015day24 = { path = "2015/day24" }
year2015day25 = { path = "2015/day25" }

year2016day01 = { path = "2016/day01" }
year2016day02 = { path = "2016/day02" }
year2016day03 = { path = "2016/day03" }
year2016day04 = { path = "2016/day04" }
year2016day05 = { path = "2016/day05" }
year2016day06 = { path = "2016/day06" }
year2016day07 = { path = "2016/day07" }
year2016day08 = { path = "2016/day08" }
year2016day09 = { path = "2016/day09" }
year2016day10 = { path = "2016/day10" }
year2016day11 = { path = "2016/day11" }
year2016day12 = { path = "2016/day12" }
year2016day13 = { path = "2016/day13" }
year2016day14 = { path = "2016/day14" }
year2016day15 = { path = "2016/day15" }
year2016day16 = { path = "2016/day16" }
year2016day17 = { path = "2016/day17" }
year2016day18 = { path = "2016/day18" }
year2016day19 = { path = "2016/day19" }
year2016day20 = { path = "2016/day20" }
year2016day21 = { path = "2016/day21" }
year2016day22 = { path = "2016/day22" }
year2016day23 = { path = "2016/day23" }
year2016day24 = { path = "2016/day24" }
year2016day25 = { path = "2016/day25" }

year2017day01 = { path = "2017/day01" }
year2017day02 = { path = "2017/day02" }
year2017day03 = { path = "2017/day03" }
year2017day04 = { path = "2017/day04" }
year2017day05 = { path = "2017/day05" }
year2017day06 = { path = "2017/day06" }
year2017day07 = { path = "2017/day07" }
year2017day08 = { path = "2017/day08" }
year2017day09 = { path = "2017/day09" }
year2017day10 = { path = "2017/day10" }
year2017day11 = { path = "2017/day11" }
year2017day12 = { path = "2017/day12" }
year2017day13 = { path = "2017/day13" }
year2017day14 = { path = "2017/day14" }
year2017day15 = { path = "2017/day15" }
year2017day16 = { path = "2017/day16" }
year2017day17 = { path = "2017/day17" }
year2017day18 = { path = "2017/day18" }
year2017day19 = { path = "2017/day19" }
year2017day20 = { path = "2017/day20" }
year2017day21 = { path = "2017/day21" }
year2017day22 = { path = "2017/day22" }
year2017day23 = { path = "2017/day23" }
year2017day24 = { path = "2017/day24" }
year2017day25 = { path = "2017/day25" }

year2018day01 = { path = "2018/day01" }
year2018day02 = { path = "2018/day02" }
year2018day03 = { path = "2018/day03" }
year2018day04 = { path = "2018/day04" }
year2018day05 = { path = "2018/day05" }
year2018day06 = { path = "2018/day06" }
year2018day07 = { path = "2018/day07" }
year2018day08 = { path = "2018/day08" }
year2018day09 = { path = "2018/day09" }
year2018day10 = { path = "2018/day10" }
year2018day11 = { path = "2018/day11" }
year2018day12 = { path = "2018/day12" }
year2018day13 = { path = "2018/day13" }
year2018day14 = { path = "2018/day14" }
year2018day15 = { path = "2018/day15" }
year2018day16 = { path = "2018/day16" }
year2018day17 = { path = "2018/day17" }
year2018day18 = { path = "2018/day18" }
year2018day19 = { path = "2018/day19" }
year2018day20 = { path = "2018/day20" }
year2018day21 = { path = "2018/day21" }
year2018day22 = { path = "2018/day22" }
year2018day23 = { path = "2018/day23" }
year2018day24 = { path = "2018/day24" }
year2018day25 = { path = "2018/day25" }

year2019day01 = { path = "2019/day01" }
year2019day02 = { path = "2019/day02" }
year2019day03 = { path = "2019/day03" }
year2019day04 = { path = "2019/day04" }
year2019day05 = { path = "2019/day05" }
year2019day06 = { path = "2019/day06" }
year2019day07 = { path = "2019/day07" }
year2019day08 = { path = "2019/day08" }
year2019day09 = { path = "2019/day09" }
year2019day10 = { path = "2019/day10" }
year2019day11 = { path = "2019/day11" }
year2019day12 = { path = "2019/day12" }
year2019day13 = { path = "2019/day13" }
year2019day14 = { path = "2019/day14" }
year2019day15 = { path = "2019/day15" }
year2019day16 = { path = "2019/day16" }
year2019day17 = { path = "2019/day17" }
year2019day18 = { path = "2019/day18" }
year2019day19 = { path = "2019/day19" }
year2019day20 = { path = "2019/day20" }
year2019day21 = { path = "2019/day21" }
year2019day22 = { path = "2019/day22" }
year2019day23 = { path = "2019/day23" }
year2019day24 = { path = "2019/day24" }
year2019day25 = { path = "2019/day25" }

year2020day01 = { path = "2020/day01" }
year2020day02 = { path = "2020/day02" }
year2020day03 = { path = "2020/day03" }
year2020day04 = { path = "2020/day04" }
year2020day05 = { path = "2020/day05" }
year2020day06 = { path = "2020/day06" }
year2020day07 = { path = "2020/day07" }
year2020day08 = { path = "2020/day08" }
year2020day09 = { path = "2020/day09" }
year2020day10 = { path = "2020/day10" }
year2020day11 = { path = "2020/day11" }
year2020day12 = { path = "2020/day12" }
year2020day13 = { path = "2020/day13" }
year2020day14 = { path = "2020/day14" }
year2020day15 = { path = "2020/day15" }
year2020day16 = { path = "2020/day16" }
year2020day17 = { path = "2020/day17" }
year2020day18 = { path = "2020/day18" }
year2020day19 = { path = "2020/day19" }
year2020day20 = { path = "2020/day20" }
year2020day21 = { path = "2020/day21" }
year2020day22 = { path = "2020/day22" }
year2020day23 = { path = "2020/day23" }
year2020day24 = { path = "2020/day24" }
year2020day25 = { path = "2020/day25" }

year2021day01 = { path = "2021/day01" }
year2021day02 = { path = "2021/day02" }
year2021day03 = { path = "2021/day03" }
year2021day04 = { path = "2021/day04" }
year2021day05 = { path = "2021/day05" }
year2021day06 = { path = "2021/day06" }
year2021day07 = { path = "2021/day07" }
year2021day08 = { path = "2021/day08" }
year2021day09 = { path = "2021/day09" }
year2021day10 = { path = "2021/day10" }
year2021day11 = { path = "2021/day11" }
year2021day12 = { path = "2021/day12" }
year2021day13 = { path = "2021/day13" }
year2021day14 = { path = "2021/day14" }
year2021day15 = { path = "2021/day15" }
year2021day16 = { path = "2021/day16" }
year2021day17 = { path = "2021/day17" }
year2021day18 = { path = "2021/day18" }
year2021day19 = { path = "2021/day19" }
year2021day20 = { path = "2021/day20" }
year2021day21 = { path = "2021/day21" }
year2021day22 = { path = "2021/day22" }
year2021day23 = { path = "2021/day23" }
year2021day24 = { path = "2021/day24" }
year2021day25 = { path = "2021/day25" }

year2022day01 = { path = "2022/day01" }
year2022day02 = { path = "2022/day02" }
year2022day03 = { path = "2022/day03" }
year2022day04 = { path = "2022/day04" }
year2022day05 = { path = "2022/day05" }
year2022day06 = { path = "2022/day06" }
year2022day07 = { path = "2022/day07" }
year2022day08 = { path = "2022/day08" }
year2022day09 = { path = "2022/day09" }
year2022day10 = { path = "2022/day10" }
year2022day11 = { path = "2022/day11" }
year2022day12 = { path = "2022/day12" }
year2022day13 = { path = "2022/day13" }
year2022day14 = { path = "2022/day14" }
year2022day15 = { path = "2022/day15" }
year2022day16 = { path = "2022/day16" }
year2022day17 = { path = "2022/day17" }
year2022day18 = { path = "2022/day18" }
year2022day19 = { path = "2022/day19" }
year2022day20 = { path = "2022/day20" }
year2022day21 = { path = "2022/day21" }
year2022day22 = { path = "2022/day22" }
year2022day23 = { path = "2022/day23" }
year2022day24 = { path = "2022/day24" }
year2022day25 = { path = "2022/day25" }

year2023day01 = { path = "2023/day01" }
year2023day02 = { path = "2023/day02" }
year2023day03 = { path = "2023/day03" }
year2023day04 = { path = "2023/day04" }
year2023day05 = { path = "2023/day05" }
year2023day06 = { path = "2023/day06" }
year2023day07 = { path = "2023/day07" }
year2023day08 = { path = "2023/day08" }
year2023day09 = { path = "2023/day09" }
year2023day10 = { path = "2023/day10" }
year2023day11 = { path = "2023/day11" }
year2023day12 = { path = "2023/day12" }
year2023day13 = { path = "2023/day13" }
year2023day14 = { path = "2023/day14" }
year2023day15 = { path = "2023/day15" }
year2023day16 = { path = "2023/day16" }
year2023day17 = { path = "2023/day17" }
year2023day18 = { path = "2023/day18" }
year2023day19 = { path = "2023/day19" }
year2023day20 = { path = "2023/day20" }
year2023day21 = { path = "2023/day21" }
year2023day22 = { path = "2023/day22" }
year2023day23 = { path = "2023/day23" }
year2023day24 = { path = "2023/day24" }
year2023day25 = { path = "2023/day25" }

year2025day01 = { path = "2025/day01" }
year2025day02 = { path = "2025/day02" }
year2025day03 = { path = "2025/day03" }
year2025day04 = { path = "2025/day04" }
year2025day05 = { path = "2025/day05" }
year2025day06 = { path = "2025/day06" }
year2025day07 = { path = "2025/day07" }
year2025day08 = { path = "2025/day08" }
year2025day09 = { path = "2025/day09" }
year2025day10 = { path = "2025/day10" }
year2025day11 = { path = "2025/day11" }
year2025day12 = { path = "2025/day12" }

argh = "0.1.10"
common = {path = "common"}
